# examples

./: README.md
code/C/boost/: test.cpp
code/C/boost-python-cpp/: CMakeLists.txt.bak  Makefile  README.md  daemon.cc  daemon.h  test.py
code/C/gobjectdemo/: Makefile  README  main.c  my_demo.c  my_demo.h
code/C/list/: nodelist.cc
code/C/my-callback/: CMakeLists.txt  ReadMe  test.c
code/C/my-callback/client/: CMakeLists.txt  client.c  client.h  dll.c  dll.h  main.cpp
code/C/my-callback/server/: CMakeLists.txt  DataController.cpp  DataController.h  WorkerThread.cpp  WorkerThread.h  my_callback_api.cpp  my_callback_api.h  thread.cpp  thread.h
code/C/my-daemon/src/: Makefile.am  my_daemon.h  my_plugin.h  my_plugin_info.h  org.freedesktop.myplugindaemon.xml
code/C/my-plugin-daemon/: Makefile.am  NEWS  README  autogen.sh  clean.sh  configure.ac
code/C/my-plugin-daemon/data/: Makefile.am  org.freedesktop.MyPluginDaemon.plugins.diskmonitor.gschema.xml.in
code/C/my-plugin-daemon/debian/: changelog  control  rules
code/C/my-plugin-daemon/plugins/: Makefile.am
code/C/my-plugin-daemon/plugins/diskmonitor/: Makefile.am  diskmonitor.my-plugin.in  my-space-test  my_diskmonitor_dialog.c  my_diskmonitor_dialog.h  my_diskmonitor_plugin.c  my_diskmonitor_plugin.h  my_diskmonitor_space.c  my_diskmonitor_space.h
code/C/my-plugin-daemon/src/: Makefile.am  ReadMe  main.c  my_daemon.c  my_module.c  my_module.h  my_plugin.c  my_plugin_info.c
code/C/myglibdbus/: AUTHORS  Makefile.am  NEWS  README  autogen.sh  clean.sh  configure.ac
code/C/myglibdbus/src/: Makefile.am  client.c  client2.c  marshal.list  myglibdbus.c  myglibdbus.h  myglibdbus_proxy.h  org.freedesktop.myglibdbus.xml  packedhashtable.c  packedhashtable.h  server.c
code/C/proclist/: ReadMe  processlist.c
code/C/protobuf/: Makefile  README.md  myinfo.proto  test_in.c  test_out.c
code/C/protobuf-boost-aiso/: CMakeLists.txt  ReadMe
code/C/protobuf-boost-aiso/client/: CMakeLists.txt
code/C/protobuf-boost-aiso/client/src/: android_api_skeleton.cpp  android_api_skeleton.h  host_connector.cpp  host_connector.h  local_socket_connection.cpp  local_socket_connection.h  main.cpp  message_processor.cpp  message_processor.h  platform_api_stub.cpp  platform_api_stub.h
code/C/protobuf-boost-aiso/client/src/common/: channel.cpp  channel.h  constants.h  fd.cpp  fd.h  fd_sets.h  google_protobuf_guard.cpp  kydroid_bridge.proto  kydroid_rpc.pb.h  make_protobuf_object.h  message_processor.cpp  message_processor.h  message_processor_base.h  message_sender.h  pending_call_cache.cpp  pending_call_cache.h  rect.cpp  rect.h  template_message_processor.h  variable_length_array.h  wait_handle.cpp  wait_handle.h
code/C/protobuf-boost-aiso/server/: CMakeLists.txt  main.cpp  runtime.cpp  runtime.h
code/C/protobuf-boost-aiso/server/bridge/: android_api_stub.cpp  android_api_stub.h  platform_api_skeleton.cpp  platform_api_skeleton.h  platform_message_processor.cpp  platform_message_processor.h
code/C/protobuf-boost-aiso/server/common/: fd.h  variable_length_array.h  wait_handle.cpp  wait_handle.h
code/C/protobuf-boost-aiso/server/network/: base_socket_messenger.cpp  base_socket_messenger.h  connection_creator.h  connections.h  delegate_connection_creator.h  local_socket_messenger.cpp  local_socket_messenger.h  message_processor.h  message_receiver.h  message_sender.h  published_socket_connector.cpp  published_socket_connector.h  socket_connection.cpp  socket_connection.h  socket_helper.cpp  socket_helper.h
code/C/protobuf-boost-aiso/server/protobuf/: ReadMe  kydroid_bridge.pb.cc  kydroid_bridge.pb.h  kydroid_rpc.pb.cc  kydroid_rpc.proto
code/C/protobuf-boost-aiso/server/rpc/: channel.cpp  channel.h  connection_creator.cpp  connection_creator.h  constants.h  make_protobuf_object.h  message_processor.cpp  message_processor.h  pending_call_cache.cpp  pending_call_cache.h
code/C/protobuf-boost-aiso/server/wm/: kydroidrect.cpp  kydroidrect.h  kydroidtask.cpp  kydroidtask.h  mywindow.cpp  mywindow.h  single_window_manager.cpp  single_window_manager.h
code/C/remalloc-demo/: AppSendInfo.pb.cc  AppSendInfo.pb.h  AppSendInfo.proto  ReadMe  client1.cc  client2.cc  server1.cc  server2.cc
code/C/stdin/: main.c  stdin.c
code/Python/protobuf/: README.md  myinfo.proto  myinfo_pb2.py  test_in.py  test_out.py
code/Qt/expandable-listwidget/: README.md  detailwidget.cpp  detailwidget.h  expandable-listwidget.pro  listcontent.cpp  listcontent.h  listitem.cpp  listitem.h  listwidget.cpp  listwidget.h  mainwindow.cpp  mainwindow.h  utils.h  widgetbox.cpp  widgetbox.h
code/Qt/floatwidget/: autohidewidget.cpp  autohidewidget.h  contentwidget.cpp  contentwidget.h  floatball.cpp  floatball.h  floatwidget.pro  main.cpp  restartwidget.cpp  restartwidget.h  toolbar.cpp  toolbar.h  widget.cpp  widget.h
code/Qt/inputpass/: ReadMe  inputpass.pro  main.cpp  res.qrc  widget.cpp  widget.h
code/Qt/keyboard-monitor/: ReadMe  keyboard-monitor.pro  keylogger.py  main.cpp  native-event-filter-factory.cpp  native-event-filter-factory.h  widget.cpp  widget.h
code/Qt/loghandler/: loghandler.pro  main.cpp  mainwindow.cpp  mainwindow.h
code/Qt/mympvplayer/: bottomwidget.cpp  bottomwidget.h  core.cpp  core.h  global.cpp  global.h  inforeader.cpp  inforeader.h  mainwindow.cpp  mainwindow.h  mediadata.cpp  mediadata.h  mediasettings.cpp  mediasettings.h  mympvplayer.pro  myprocess.cpp  myprocess.h  preferences.cpp  preferences.h  timeslider.cpp  timeslider.h  utils.cpp  utils.h  videowindow.cpp  videowindow.h
code/Qt/myplugins/: ReadMe  plugin-demo.pro
code/Qt/myplugins/plugins/: plugins.pro
code/Qt/myplugins/src/: contentwidget.cpp  contentwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  plugininterface.h  pluginmanager.cpp  pluginmanager.h  (+1 more)
code/Qt/notification/: ReadMe  main.cpp  mainwindow.cpp  mainwindow.h  notification.pro
code/Qt/stdin/: main.cpp  stdin.pro
code/Qt/windowstate/: ReadMe  main.cpp  utils.cpp  utils.h  widget.cpp  widget.h  windowstate.pro
code/gtk/application-demo/: Makefile  ReadMe  main.c  mainwindow.ui  style.css
(+44 files in other folders)
